Explicitly look for XKB instead of juggling paths in base of a prefix

Instead of looking for X11 libraries and then looking stuff up, just find the directory we're looking for.
Also drop XBINDIR, as it wasn't being used at all.

REVIEW: 124215
BUG: 349658